hashgenerator/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hashgenerator-dep
  namespace: hashgenerator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hashgenerator
  template:
    metadata:
      labels:
        app: hashgenerator
    spec:
      containers:
        - name: hashgenerator-server
          image: movd/devopswithkubernetes-hashgenerator-server:sha-7221ef8
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
        - name: hashgenerator
          image: movd/devopswithkubernetes-hashgenerator:sha-3479d69
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
